test/resources/typer/passing/QualifiedClass.scala
object QualClass {
    val x: O.Option = O.Some(1);
    x
}