test/resources/typer/failing/LetError1.scala
object LetError1 {
  def test(): Int = {
    val x: Int = 1;
    false
  }
}
